--- a/web_scraping.ipynb
+++ b/web_scraping.ipynb
@@ -6,7 +6,7 @@
       "name": "web-scraping.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPD9sEcF2MlFM62UZVFkauU",
+      "authorship_tag": "ABX9TyNqjHSrNVMPjv2iPSJEzLc+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,12 +70,12 @@
         "h2_all = soup.find_all('h2', class_='block-title')\n",
         "\n",
         "for h2 in h2_all:\n",
-        "  print('h2 tag: ' + h2.text[0] + h2.text)\n",
+        "  print('h2 tag: ' + h2.text[0] + h2.text.upper())\n",
         "\n",
         "option_all = soup.find_all('option')\n",
         "\n",
         "for option in option_all:\n",
-        "  print('option tag: ' + option.text[0] + option.text)\n",
+        "  print('option tag: ' + option.text[0] + option.text.upper())\n",
         "\n",
         "h1_alls = soup.find_all('h1', id='page-title')\n",
         "\n",
@@ -87,39 +87,39 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a9ec47a9-3597-41b5-cfbe-943412d5b63d"
+        "outputId": "e49dfe37-cebb-4097-d92f-ab434e1ec83b"
       },
-      "execution_count": 3,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "h2 tag: FFilter Upcoming Events by Field\n",
-            "h2 tag: FFilter By Events Type\n",
-            "option tag: SSelect an item\n",
-            "option tag: AApplied Theory\n",
-            "option tag: BBehavioral and Experimental\n",
-            "option tag: CContracts and Organizations\n",
-            "option tag: DDiversity, Inclusion and Belonging\n",
-            "option tag: EEconometrics\n",
-            "option tag: EEconomic Development\n",
-            "option tag: EEconomic History\n",
-            "option tag: EEnvironmental\n",
-            "option tag: FFinancial\n",
-            "option tag: HHealth\n",
-            "option tag: IIndustrial Organization (1)\n",
-            "option tag: IInternational\n",
-            "option tag: LLabor\n",
-            "option tag: LLaw\n",
-            "option tag: MMonetary and Fiscal\n",
-            "option tag: PPolitical Economy\n",
-            "option tag: PPublic Policy\n",
-            "option tag: RReligion\n",
-            "option tag: SScience\n",
-            "Public Policy\n",
-            "option tag: SScience\n",
-            "option tag: TTheory\n",
+            "h2 tag: FFILTER UPCOMING EVENTS BY FIELD\n",
+            "h2 tag: FFILTER BY EVENTS TYPE\n",
+            "option tag: SSELECT AN ITEM\n",
+            "option tag: AAPPLIED THEORY\n",
+            "option tag: BBEHAVIORAL AND EXPERIMENTAL\n",
+            "option tag: CCONTRACTS AND ORGANIZATIONS\n",
+            "option tag: DDIVERSITY, INCLUSION AND BELONGING\n",
+            "option tag: EECONOMETRICS\n",
+            "option tag: EECONOMIC DEVELOPMENT\n",
+            "option tag: EECONOMIC HISTORY\n",
+            "option tag: EENVIRONMENTAL\n",
+            "option tag: FFINANCIAL\n",
+            "option tag: HHEALTH\n",
+            "option tag: IINDUSTRIAL ORGANIZATION (2)\n",
+            "option tag: IINTERNATIONAL\n",
+            "option tag: LLABOR\n",
+            "option tag: LLAW\n",
+            "option tag: MMONETARY AND FISCAL\n",
+            "option tag: PPOLITICAL ECONOMY\n",
+            "option tag: PPUBLIC POLICY\n",
+            "option tag: RRELIGION\n",
+            "option tag: SSCIENCE\n",
+            "PUBLIC POLICY\n",
+            "option tag: SSCIENCE\n",
+            "option tag: TTHEORY\n",
             "h1 tag \n",
             "\t\t\t\t\t\t\t\t\t\t\t\tSeminars\t\t\t\t\t\t\t\t\t\t\t\n"
           ]
