--- a/web_scraping.ipynb
+++ b/web_scraping.ipynb
@@ -6,7 +6,7 @@
       "name": "web-scraping.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNqjHSrNVMPjv2iPSJEzLc+",
+      "authorship_tag": "ABX9TyOYnB0TONjwtxtx6zewoZPN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -80,16 +80,18 @@
         "h1_alls = soup.find_all('h1', id='page-title')\n",
         "\n",
         "for h1s in h1_alls:\n",
-        "  print('h1 tag ' + h1s.text)"
+        "  print('h1 tag ' + h1s.text)\n",
+        "\n",
+        "print(h1_alls)\n"
       ],
       "metadata": {
         "id": "gWlb9Pj_jZde",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e49dfe37-cebb-4097-d92f-ab434e1ec83b"
+        "outputId": "5b509ba3-c33b-4128-8271-1b553aaf6ae0"
       },
-      "execution_count": 16,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -121,7 +123,9 @@
             "option tag: SSCIENCE\n",
             "option tag: TTHEORY\n",
             "h1 tag \n",
-            "\t\t\t\t\t\t\t\t\t\t\t\tSeminars\t\t\t\t\t\t\t\t\t\t\t\n"
+            "\t\t\t\t\t\t\t\t\t\t\t\tSeminars\t\t\t\t\t\t\t\t\t\t\t\n",
+            "[<h1 id=\"page-title\" ng-non-bindable=\"\">\n",
+            "\t\t\t\t\t\t\t\t\t\t\t\tSeminars\t\t\t\t\t\t\t\t\t\t\t</h1>]\n"
           ]
         }
       ]
