--- a/web_scraping.ipynb
+++ b/web_scraping.ipynb
@@ -6,7 +6,7 @@
       "name": "web-scraping.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOYnB0TONjwtxtx6zewoZPN",
+      "authorship_tag": "ABX9TyN1jwhQ83k69iEpbHizdsZl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,16 +82,18 @@
         "for h1s in h1_alls:\n",
         "  print('h1 tag ' + h1s.text)\n",
         "\n",
-        "print(h1_alls)\n"
+        "print(h1_alls)\n",
+        "print(h2_all)\n",
+        "print(option_all)\n"
       ],
       "metadata": {
         "id": "gWlb9Pj_jZde",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5b509ba3-c33b-4128-8271-1b553aaf6ae0"
+        "outputId": "6ee140b3-84bd-4996-fbba-c22930c9a6a5"
       },
-      "execution_count": 12,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,7 +127,10 @@
             "h1 tag \n",
             "\t\t\t\t\t\t\t\t\t\t\t\tSeminars\t\t\t\t\t\t\t\t\t\t\t\n",
             "[<h1 id=\"page-title\" ng-non-bindable=\"\">\n",
-            "\t\t\t\t\t\t\t\t\t\t\t\tSeminars\t\t\t\t\t\t\t\t\t\t\t</h1>]\n"
+            "\t\t\t\t\t\t\t\t\t\t\t\tSeminars\t\t\t\t\t\t\t\t\t\t\t</h1>]\n",
+            "[<h2 class=\"block-title\" ng-non-bindable=\"\">Filter Upcoming Events by Field</h2>, <h2 class=\"block-title\" ng-non-bindable=\"\">Filter By Events Type</h2>]\n",
+            "[<option value=\"https://economics.harvard.edu/calendar/upcoming/\">Select an item</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/applied-theory\">Applied Theory</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/behavioral-and-experimental\">Behavioral and Experimental</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/contracts-and-organizations\">Contracts and Organizations</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/diversity-inclusion-and-belonging\">Diversity, Inclusion and Belonging</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/econometrics\">Econometrics</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/economic-development\">Economic Development</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/economic-history\">Economic History</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/environmental\">Environmental</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/financial\">Financial</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/health\">Health</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/industrial-organization\">Industrial Organization (2)</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/international\">International</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/labor\">Labor</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/law\">Law</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/monetary-and-fiscal\">Monetary and Fiscal</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/political-economy\">Political Economy</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/public-policy\">Public Policy</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/religion\">Religion</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/science-public-policy\">Science\n",
+            "Public Policy</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/science\">Science</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/theory\">Theory</option>]\n"
           ]
         }
       ]
