--- a/web_scraping.ipynb
+++ b/web_scraping.ipynb
@@ -6,7 +6,7 @@
       "name": "web-scraping.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN1jwhQ83k69iEpbHizdsZl",
+      "authorship_tag": "ABX9TyOlDb2ysMvk3aK8u+L1sbY8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,16 +84,17 @@
         "\n",
         "print(h1_alls)\n",
         "print(h2_all)\n",
-        "print(option_all)\n"
+        "print(option_all)\n",
+        "print(span_all)\n"
       ],
       "metadata": {
         "id": "gWlb9Pj_jZde",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6ee140b3-84bd-4996-fbba-c22930c9a6a5"
+        "outputId": "57daccfe-db16-4f97-b0b5-39af59fc31e1"
       },
-      "execution_count": 8,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,7 +131,8 @@
             "\t\t\t\t\t\t\t\t\t\t\t\tSeminars\t\t\t\t\t\t\t\t\t\t\t</h1>]\n",
             "[<h2 class=\"block-title\" ng-non-bindable=\"\">Filter Upcoming Events by Field</h2>, <h2 class=\"block-title\" ng-non-bindable=\"\">Filter By Events Type</h2>]\n",
             "[<option value=\"https://economics.harvard.edu/calendar/upcoming/\">Select an item</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/applied-theory\">Applied Theory</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/behavioral-and-experimental\">Behavioral and Experimental</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/contracts-and-organizations\">Contracts and Organizations</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/diversity-inclusion-and-belonging\">Diversity, Inclusion and Belonging</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/econometrics\">Econometrics</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/economic-development\">Economic Development</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/economic-history\">Economic History</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/environmental\">Environmental</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/financial\">Financial</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/health\">Health</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/industrial-organization\">Industrial Organization (2)</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/international\">International</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/labor\">Labor</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/law\">Law</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/monetary-and-fiscal\">Monetary and Fiscal</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/political-economy\">Political Economy</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/public-policy\">Public Policy</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/religion\">Religion</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/science-public-policy\">Science\n",
-            "Public Policy</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/science\">Science</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/theory\">Theory</option>]\n"
+            "Public Policy</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/science\">Science</option>, <option value=\"https://economics.harvard.edu/calendar/upcoming/event-topic/theory\">Theory</option>]\n",
+            "[]\n"
           ]
         }
       ]
